--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,3 +50,10 @@ jobs:
         working-directory: ${{github.workspace}}
         run: |
           ./build/project/tests/mytest
+
+      - name: Code coverage
+        shell: bash
+        working-directory: ${{github.workspace}}/build
+        run: |
+          gcov ./project/CMakeFiles/matrix.dir/src/matrix.c.gcda
+
