--- a/phw-2/project/CMakeLists.txt
+++ b/phw-2/project/CMakeLists.txt
@@ -1,1 +1,5 @@
- 
+ include_directories(include)
+ # add_library(parcer STATIC src/parcer.c)
+
+add_executable(main src/main.c)
+# target_link_libraries(main parcer)
