--- a/phw-2/CMakeLists.txt
+++ b/phw-2/CMakeLists.txt
@@ -1,1 +1,24 @@
- 
+cmake_minimum_required(VERSION 3.16)
+project(parcer)
+
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++0x -Wall -Werror -Wextra -Wpedantic -ggdb3")
+
+add_subderictory(project)
+add_subderictory(test)
+
+include_directories(test)
+
+enable_testing()
+
+include_directories(../googletest)
+target_link_libraries(mytest gtest -lpthread)
+
+add_subdirectory(../googletest)
+
+set(CMAKE_MODULE_PATH ../CMakeModules)
+if(CMAKE_COMPILER_IS_GNUCXX)
+    include(CodeCoverage)
+    append_coverage_compiler_flags()
+endif()
