well, I fucked up

--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -1,9 +1,9 @@
- include_directories(include)
- # add_library(parcer STATIC src/parcer.c)
+include_directories(include)
+add_library(parcer STATIC src/parcer.c)
 
 add_subdirectory(test)
 
 include_directories(test)
 
 add_executable(main src/main.c)
-# target_link_libraries(main parcer)
+target_link_libraries(main parcer)
