--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -1,9 +1,12 @@
 include_directories(include)
-add_library(parcer STATIC src/parcer.c)
+add_library(parcer_in_series STATIC src/parcer_in_series.c)
+add_library(parcer_in_parallel SHARED src/parcer_in_parallel.c)
 
 add_subdirectory(test)
 
 include_directories(test)
 
 add_executable(main src/main.c)
-target_link_libraries(main parcer)
+target_link_libraries(main parcer_in_series)
+target_link_libraries(main parcer_in_parallel)
+target_link_libraries(main Threads::Threads)
