--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -10,3 +10,7 @@ add_executable(main src/main.c)
 target_link_libraries(main parcer_in_series)
 target_link_libraries(main parcer_in_parallel)
 target_link_libraries(main Threads::Threads)
+
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
+include(CodeCoverage)
+append_coverage_compiler_flags()
