added test coverage

--- a/.github/workflows/phw-2.yml
+++ b/.github/workflows/phw-2.yml
@@ -54,6 +54,5 @@ jobs:
         shell: bash
         working-directory: ${{github.workspace}}/build
         run: |
-          gcov ./project/CMakeFiles/parcer_in_parallel.dir/src/parcer_in_parallel.c.gcda 
-          project/CMakeFiles/parcer_in_series.dir/src/parcer_in_series.c.gcda
+          gcov ./project/CMakeFiles/parcer_in_parallel.dir/src/parcer_in_parallel.c.gcda ./project/CMakeFiles/parcer_in_series.dir/src/parcer_in_series.c.gcda
 
