--- a/project/test/CMakeLists.txt
+++ b/project/test/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include_directories(include)
+include_directories(src)
 
 add_executable(mytest src/test.cpp)
 target_link_libraries(mytest parcer_in_series)
