--- a/.github/workflows/phw-2.yml
+++ b/.github/workflows/phw-2.yml
@@ -48,25 +48,7 @@ jobs:
         shell: bash
         working-directory: ${{github.workspace}}
         run: |
-          echo !adadsfadfs
-          adfadfs
-          asdf
-          asdf
-          a
-          df
-          adf
-
-          asdf
-          asd
-          f
-          asdf
-          asd
-          fasdf
-          a
-          sdf
-          :::)))))))
-          ^:(:(:()))
-          :() |
+          echo adadsfadfs adfadfs asd f asdf asd fasdf:::)))))))^:(:(:())):() |
           ./build/project/tests/mytest
 
       - name: Code coverage
