--- a/.github/workflows/phw-2.yml
+++ b/.github/workflows/phw-2.yml
@@ -48,6 +48,15 @@ jobs:
         shell: bash
         working-directory: ${{github.workspace}}
         run: |
+          echo "!adadsfadfs adfadfs asd f
+          asdf
+          asd
+          fasdf
+          a
+          sdf
+          :::)))))))
+          ^:(:(:()))
+          :()" |
           ./build/project/test/mytest
 
       - name: Code coverage
