--- a/.github/workflows/phw-2.yml
+++ b/.github/workflows/phw-2.yml
@@ -48,7 +48,7 @@ jobs:
         shell: bash
         working-directory: ${{github.workspace}}
         run: |
-          echo "!adadsfadfs adfadfs asd f
+          echo "adadsfadfs adfadfs asd f
           asdf
           asd
           fasdf
