--- a/.github/workflows/phw-2.yml
+++ b/.github/workflows/phw-2.yml
@@ -48,15 +48,7 @@ jobs:
         shell: bash
         working-directory: ${{github.workspace}}
         run: |
-          echo "adadsfadfs adfadfs asd f
-          asdf
-          asd
-          fasdf
-          a
-          sdf
-          :::)))))))
-          ^:(:(:()))
-          :()" |
+          echo "adadsfadfs adfadfs asd f:::)))))))^:(:(:())):()" | 
           ./build/project/test/mytest
 
       - name: Code coverage
