--- a/.github/workflows/phw-2.yml
+++ b/.github/workflows/phw-2.yml
@@ -51,6 +51,26 @@ jobs:
         shell: bash
         working-directory: ${{github.workspace}}
         run: |
+          echo "adadsfadfs
+adfadfs
+asdf
+asdf
+a
+df
+adf
+
+asdf
+asd
+f
+asdf
+asd
+fasdf
+a
+sdf
+:::)))))))
+^:(:(:()))
+:()
+          "
           ./build/project/test/mytest
 
       # - name: Code coverage
