--- a/.github/workflows/phw-2.yml
+++ b/.github/workflows/phw-2.yml
@@ -70,6 +70,25 @@ jobs:
           :::)))))))
           ^:(:(:()))
           :()" |
+          echo "adadsfadfs
+          adfadfs
+          asdf
+          asdf
+          a
+          df
+          adf
+
+          asdf
+          asd
+          f
+          asdf
+          asd
+          fasdf
+          a
+          sdf
+          :::)))))))
+          ^:(:(:()))
+          :()" |
           ./build/project/test/mytest
 
       # - name: Code coverage
